# course-repository

./: .gitignore  Readme.md  pyproject.toml
data-python/: cpi_monthly.parquet  factors_ff3_daily.parquet  factors_ff3_monthly.parquet  factors_ff5_monthly.parquet  factors_q_monthly.parquet  industries_ff_monthly.parquet  macro_predictors.parquet
data-r/: cpi_monthly.parquet  factors_ff3_daily.parquet  factors_ff3_monthly.parquet  factors_ff5_monthly.parquet  factors_q_monthly.parquet  industries_ff_monthly.parquet  macro_predictors.parquet
lecture-slides/: aef-1-introduction.qmd  ku_clean.scss
lecture_slides/: pre_session_script.R
mandatory-assignments/: MA_R_template.qmd
mandatory-assignments/MA_R_template_cache/pdf/: unnamed-chunk-2_ce571ee82e006cd3ccc437d756179ed6.rdb  unnamed-chunk-2_ce571ee82e006cd3ccc437d756179ed6.rdx
mandatory_assignments/: MA_R_template.qmd  MA_python_template.qmd
mandatory_assignments/MA_R_template_cache/pdf/: __packages  unnamed-chunk-2_ce571ee82e006cd3ccc437d756179ed6.RData  unnamed-chunk-2_ce571ee82e006cd3ccc437d756179ed6.rdb  unnamed-chunk-2_ce571ee82e006cd3ccc437d756179ed6.rdx
