[project]
name = "aef-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "great-tables>=0.20.0",
    "ipython>=9.9.0",
    "jupyter>=1.1.1",
    "mizani>=0.14.3",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "plotnine>=0.15.2",
    "tidyfinance>=0.2.5",
]
